8179618: Fixes for range of OptoLoopAlignment and Inlining flags

OptoLoopAlignment must be multiple of NOP size. Inlining flags must not exceed WarmCallInfo::MAX_VALUE().

Reviewed-by: kvn, stuefe